Fix bootstrap 5 layout issue

--- a/web/assets/css/bs5.css
+++ b/web/assets/css/bs5.css
@@ -125,7 +125,7 @@ a {
     color: #6f42c1;
 }
 
-.aou-order-form label {
+.aou-order-form label, .aou-order-form .col-form-label {
     display: inline-block;
     max-width: 100%;
     margin-bottom: 5px;
@@ -141,6 +141,9 @@ a {
 .aou-order-form .checkbox label {
     font-weight: 400;
     margin: 0;
+}
+.aou-order-form .form-check-input {
+    border-color: #7a8086
 }
 
 .form-control[readonly] {
